Python3.11: Use _PyFunction_Vectorcall over manual code
* We might be able to later still shave some cycles off, e.g.
  by reusing interpreter frames, but for now this works.

--- a/nuitka/code_generation/templates_c/CodeTemplateCallsPositional.c.j2
+++ b/nuitka/code_generation/templates_c/CodeTemplateCallsPositional.c.j2
@@ -300,8 +300,9 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
 #endif
 #if !defined(_NUITKA_EXPERIMENTAL_DISABLE_UNCOMPILED_FUNCTION_CALL_OPT)
     } else if (PyFunction_Check(called)) {
+#if PYTHON_VERSION < 0x3b0
 {% if args_count == 0 %}
-        return _fast_function_noargs(called);
+        return callPythonFunctionNoArgs(called);
 {% else %}
         return callPythonFunction(
             called,
@@ -309,6 +310,13 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
             {{args_count}}
         );
 {% endif %}
+#else
+{% if args_count == 0 %}
+    return _PyFunction_Vectorcall(called, NULL, 0, NULL);
+{% else %}
+    return _PyFunction_Vectorcall(called, args, {{args_count}}, NULL);
+{% endif %}
+#endif
 #endif
 #if !defined(_NUITKA_EXPERIMENTAL_DISABLE_TYPE_CREATION_OPT)
     } else if (PyType_Check(called)) {
