Optimization: Avoid using non-optimal malloc functions
* The macro should be preferred, and Py_NEW does only useless stuff on top.

* This might fix build issues on older openSUSE.

--- a/nuitka/code_generation/templates_c/HelperDictionaryCopy.c.j2
+++ b/nuitka/code_generation/templates_c/HelperDictionaryCopy.c.j2
@@ -136,17 +136,17 @@ else
 {% endmacro %}
 
 #if PYTHON_VERSION < 0x3b0
-typedef PyObject *PyDictValues;
+typedef PyObject * PyDictValues;
 #endif
 
 static inline PyDictValues *Nuitka_PyDict_new_values(Py_ssize_t size) {
 #if PYTHON_VERSION < 0x3b0
-    return PyMem_NEW(PyObject *, size);
+    return PyMem_MALLOC(sizeof(PyObject *) * size);
 #else
     // With Python3.11 or higher a prefix is allocated too.
     size_t prefix_size = _Py_SIZE_ROUND_UP(size + 2, sizeof(PyObject *));
     size_t n = prefix_size + size * sizeof(PyObject *);
-    uint8_t *mem = (uint8_t *)PyMem_Malloc(n);
+    uint8_t *mem = (uint8_t *)PyMem_MALLOC(n);
 
     assert(mem != NULL);
 
