--- a/nuitka/code_generation/templates_c/HelperDictionaryCopy.c.j2
+++ b/nuitka/code_generation/templates_c/HelperDictionaryCopy.c.j2
@@ -20,7 +20,7 @@ CHECK_OBJECT({{dict_value}});
 assert(PyDict_CheckExact({{dict_value}}));
 
 if (((PyDictObject *){{dict_value}})->ma_used == 0) {
-    {{ result }} = PyDict_New();
+    {{ result }} = MAKE_DICT_EMPTY();
 }
 else
 {
@@ -53,13 +53,7 @@ else
     /* Python 3 */
 #ifndef PY_NOGIL
     if (_PyDict_HasSplitTable(dict_mp)) {
-#if PYTHON_VERSION < 0x360
-        Py_ssize_t size = dict_mp->ma_keys->dk_size;
-#elif PYTHON_VERSION < 0x3b0
-        Py_ssize_t size = DK_USABLE_FRACTION(DK_SIZE(dict_mp->ma_keys));
-#else
-        Py_ssize_t size = Nuitka_Py_shared_keys_usable_size(dict_mp->ma_keys);
-#endif
+        Py_ssize_t size = DK_ENTRIES_SIZE(dict_mp->ma_keys);
 
         PyDictObject *result_mp = _Nuitka_AllocatePyDictObject();
         assert(result_mp != NULL);
@@ -76,7 +70,7 @@ else
         }
 {% endif %}
 
-        PyDictValues *new_values = Nuitka_PyDict_new_values(size);
+        PyDictValues *new_values = _Nuitka_PyDict_new_values(size);
         assert(new_values != NULL);
 
 #if PYTHON_VERSION >= 0x3b0
@@ -113,11 +107,15 @@ else
         Nuitka_GC_Track(result_mp);
     } else
 #endif
-#if PYTHON_VERSION >= 0x3a0
+    {# TODO: This should be working for before 3.6 as well, but posed riddles with
+      crashes at release time. Need to check if the keys allocator is different
+      in some API somehow, or non-split dictionaries which didn't exist then are
+      to be handled differently. #}
+#if PYTHON_VERSION >= 0x360
     // Fast dictionary copy if it has at least 2/3 space usage. This is most relevant
     // for the DICT_COPY, where it might even be the intention to trigger a shrink with
     // a fresh copy.
-    if (dict_mp->ma_values == NULL && (dict_mp->ma_used >= (dict_mp->ma_keys->dk_nentries * 2) / 3)) {
+    if (dict_mp->ma_values == NULL && IS_COMPACT(dict_mp)) {
         assert(dict_mp->ma_values == NULL);
         assert(dict_mp->ma_keys->dk_refcnt == 1);
 
@@ -127,17 +125,18 @@ else
         result_mp->ma_values = NULL;
         result_mp->ma_used = dict_mp->ma_used;
 
-        Py_ssize_t keys_size = Nuitka_Py_PyDict_KeysSize(dict_mp->ma_keys);
-        result_mp->ma_keys = PyObject_MALLOC(keys_size);
+        Py_ssize_t keys_size = _Nuitka_Py_PyDict_KeysSize(dict_mp->ma_keys);
+        result_mp->ma_keys = (PyDictKeysObject *)PyObject_MALLOC(keys_size);
         assert(result_mp->ma_keys);
 
         memcpy(result_mp->ma_keys, dict_mp->ma_keys, keys_size);
 
         // Take reference of all keys and values.
+#if PYTHON_VERSION < 0x3b0
         PyDictKeyEntry *entries = DK_ENTRIES(result_mp->ma_keys);
-        Py_ssize_t n = result_mp->ma_keys->dk_nentries;
+        Py_ssize_t size = DK_ENTRIES_SIZE(result_mp->ma_keys);
 
-        for (Py_ssize_t i = 0; i < n; i++) {
+        for (Py_ssize_t i = 0; i < size; i++) {
             PyDictKeyEntry *entry = &entries[i];
             PyObject *value = entry->me_value;
 
@@ -146,16 +145,62 @@ else
                 {{ per_key_code }}
                 Py_INCREF(key);
 
-                PyObject *value = entry->me_value;
                 {{ per_value_code }}
 
 {% if value_ref == 0 %}
                 Py_INCREF(value);
 {% endif %}
-
+{% if per_value_code %}
                 entry->me_value = value;
+{% endif %}
             }
         }
+#else
+        PyObject **key_ptr, **value_ptr;
+        size_t entry_size;
+
+        {# Different for unicode or not. #}
+        bool is_unicode = DK_IS_UNICODE(result_mp->ma_keys);
+
+        if (is_unicode) {
+            PyDictUnicodeEntry *ep0 = DK_UNICODE_ENTRIES(result_mp->ma_keys);
+
+            key_ptr = &ep0->me_key;
+            value_ptr = &ep0->me_value;
+            entry_size = sizeof(PyDictUnicodeEntry) / sizeof(PyObject*);
+        } else {
+            PyDictKeyEntry *ep0 = DK_ENTRIES(result_mp->ma_keys);
+
+            key_ptr = &ep0->me_key;
+            value_ptr = &ep0->me_value;
+            entry_size = sizeof(PyDictKeyEntry) / sizeof(PyObject*);
+        }
+
+        Py_ssize_t size = DK_ENTRIES_SIZE(result_mp->ma_keys);
+
+        for (Py_ssize_t i = 0; i < size; i++) {
+            PyObject *value = *value_ptr;
+
+            if (value != NULL) {
+                {{ per_value_code }}
+{% if value_ref == 0 %}
+                Py_INCREF(value);
+{% else %}
+                *value_ptr = value;
+{% endif %}
+                PyObject *key = *key_ptr;
+{% if per_key_code %}
+                if (is_unicode) {
+                    {{ per_key_code }}
+                }
+{% endif %}
+                Py_INCREF(key);
+            }
+
+            value_ptr += entry_size;
+            key_ptr += entry_size;
+        }
+#endif
 
     // The new keys are an object counted.
 #ifdef Py_REF_DEBUG
@@ -168,11 +213,8 @@ else
     {
         {{ result }} = _PyDict_NewPresized(dict_mp->ma_used);
 
-#if PYTHON_VERSION < 0x360
-        Py_ssize_t size = dict_mp->ma_keys->dk_size;
-#else
-        Py_ssize_t size = dict_mp->ma_keys->dk_nentries;
-#endif
+        Py_ssize_t size = DK_ENTRIES_SIZE(dict_mp->ma_keys);
+
         for (Py_ssize_t i = 0; i < size; i++) {
             PyDictKeyEntry *entry = &DK_ENTRIES(dict_mp->ma_keys)[i];
 
@@ -204,17 +246,23 @@ else
 typedef PyObject * PyDictValues;
 #endif
 
-#if PYTHON_VERSION >= 0x3a0
-#define NUITKA_DICT_HAS_FREELIST 1
-static struct _Py_dict_state *_Nuitka_Py_get_dict_state(void) {
-    PyInterpreterState *interp = _PyInterpreterState_GET();
-    return &interp->dict_state;
-}
+#if PYTHON_VERSION < 0x360
+#define DK_ENTRIES_SIZE(keys) (keys->dk_size)
+#elif PYTHON_VERSION < 0x3b0
+#define DK_ENTRIES_SIZE(keys) DK_USABLE_FRACTION(DK_SIZE(keys))
 #else
-#define NUITKA_DICT_HAS_FREELIST 0
+#define DK_ENTRIES_SIZE(keys) (keys->dk_nentries)
 #endif
 
-static inline PyDictValues *Nuitka_PyDict_new_values(Py_ssize_t size) {
+// More than 2/3 of the keys are used, i.e. no space is wasted.
+#if PYTHON_VERSION < 0x360
+#define IS_COMPACT(dict_mp) (dict_mp->ma_used >= (dict_mp->ma_keys->dk_size * 2) / 3)
+#else
+#define IS_COMPACT(dict_mp) (dict_mp->ma_used >= (dict_mp->ma_keys->dk_nentries * 2) / 3)
+#endif
+
+
+static inline PyDictValues *_Nuitka_PyDict_new_values(Py_ssize_t size) {
 #if PYTHON_VERSION < 0x3b0
     return (PyDictValues *)PyMem_MALLOC(sizeof(PyObject *) * size);
 #else
@@ -232,6 +280,14 @@ static inline PyDictValues *Nuitka_PyDict_new_values(Py_ssize_t size) {
 #endif
 }
 
+#if NUITKA_DICT_HAS_FREELIST
+static struct _Py_dict_state *_Nuitka_Py_get_dict_state(void) {
+    PyInterpreterState *interp = _PyInterpreterState_GET();
+    return &interp->dict_state;
+}
+#endif
+
+#if PYTHON_VERSION >= 0x300
 static PyDictObject *_Nuitka_AllocatePyDictObject(void) {
     PyDictObject *result_mp;
 
@@ -253,10 +309,18 @@ static PyDictObject *_Nuitka_AllocatePyDictObject(void) {
 
     return result_mp;
 }
+#endif
 
-#if PYTHON_VERSION >= 0x3a0
-static Py_ssize_t Nuitka_Py_PyDict_KeysSize(PyDictKeysObject *keys) {
-#if PYTHON_VERSION < 0x3b0
+#if PYTHON_VERSION >= 0x360 && !defined(_NUITKA_EXPERIMENTAL_DISABLE_DICT_OPT)
+static Py_ssize_t _Nuitka_Py_PyDict_KeysSize(PyDictKeysObject *keys) {
+#if PYTHON_VERSION < 0x360
+    return sizeof(PyDictKeysObject) + (DK_SIZE(keys)-1) * sizeof(PyDictKeyEntry);
+#elif PYTHON_VERSION < 0x370
+    return (sizeof(PyDictKeysObject) -
+            Py_MEMBER_SIZE(PyDictKeysObject, dk_indices) +
+            DK_IXSIZE(keys) * DK_SIZE(keys) +
+            DK_USABLE_FRACTION(DK_SIZE(keys)) * sizeof(PyDictKeyEntry));
+#elif PYTHON_VERSION < 0x3b0
     return (sizeof(PyDictKeysObject) + DK_IXSIZE(keys) * DK_SIZE(keys) +
             DK_USABLE_FRACTION(DK_SIZE(keys)) * sizeof(PyDictKeyEntry));
 #else
@@ -288,22 +352,21 @@ PyObject *DEEP_COPY_DICT(PyObject *dict_value) {
     PyObject *result;
 
 #if _NUITKA_EXPERIMENTAL_DISABLE_DICT_OPT
-    CHECK_OBJECT(value);
-    assert(PyDict_CheckExact(value));
+    CHECK_OBJECT(dict_value);
+    assert(PyDict_CheckExact(dict_value));
 
-    result = DICT_COPY(value);
+    result = DICT_COPY(dict_value);
 
     Py_ssize_t pos = 0;
-    PyObject *dict_key, *dict_value;
+    PyObject *key, *value;
 
-    while (Nuitka_DictNext(value, &pos, &dict_key, &dict_value)) {
-        PyObject *dict_value_copy = DEEP_COPY(dict_value);
+    while (Nuitka_DictNext(dict_value, &pos, &key, &value)) {
+        PyObject *dict_value_copy = DEEP_COPY(value);
 
-        if (dict_value_copy != dict_value) {
-            DICT_SET_ITEM(value, dict_key, dict_value_copy);
+        if (dict_value_copy != value) {
+            DICT_SET_ITEM(value, key, value);
         }
     }
-
 #else
     {{ dict_copy_iteration("result", "dict_value", "", "value = DEEP_COPY(value);", 1) }}
 #endif
@@ -314,8 +377,30 @@ PyObject *DEEP_COPY_DICT(PyObject *dict_value) {
 // Helper for function calls with star dict arguments. */
 static PyObject *COPY_DICT_KW(PyObject *dict_value) {
     PyObject *result;
+    bool had_kw_error = false;
 
-    {{ dict_copy_iteration("result", "dict_value", "if (unlikely(!checkKeywordType(key))) { Py_DECREF(result); return NULL; }", "", 0) }}
+#if _NUITKA_EXPERIMENTAL_DISABLE_DICT_OPT
+    CHECK_OBJECT(dict_value);
+    assert(PyDict_CheckExact(dict_value));
+
+    result = DICT_COPY(dict_value);
+
+    Py_ssize_t pos = 0;
+    PyObject *key, *value;
+
+    while (Nuitka_DictNext(dict_value, &pos, &key, &value)) {
+        if (unlikely(!checkKeywordType(key))) {
+            had_kw_error = true;
+        }
+    }
+#else
+    {{ dict_copy_iteration("result", "dict_value", "if (unlikely(!checkKeywordType(key))) { had_kw_error = true; }", "", 0) }}
+#endif
+
+    if (unlikely(had_kw_error)) {
+        Py_DECREF(result);
+        return NULL;
+    }
 
     return result;
 }
