--- a/nuitka/code_generation/templates_c/HelperSlotsFloat.c.j2
+++ b/nuitka/code_generation/templates_c/HelperSlotsFloat.c.j2
@@ -250,14 +250,7 @@ exit_result_ok_cfloat:
     {{ target.getAssignFromFloatExpressionCode(result, "cfloat_result") }}
 {% else %}
     {# TODO: Check the reference we were handed down. #}
-    if (Py_REFCNT({{ operand1 }}) == 1) {
-        PyFloat_AS_DOUBLE({{ operand1 }}) = cfloat_result;
-    } else {
-        // We got an object handed, that we have to release.
-        Py_DECREF({{ operand1 }});
-
-        {{ left.getAssignFromFloatExpressionCode(operand1, "cfloat_result") }}
-    }
+    PyFloat_SET_DOUBLE({{ operand1 }}, cfloat_result);
 {% endif %}
     {{ goto_exit(props, exit_result_ok) }}
 {% endif %}
