Optimization: For Python 3.10+ have faster float object creation
* We can share the free list of CPython interpreter there avoiding the
  call to the DLL and be faster with many float operations as a result.

--- a/nuitka/code_generation/templates_c/HelperSlotsInt.c.j2
+++ b/nuitka/code_generation/templates_c/HelperSlotsInt.c.j2
@@ -194,8 +194,8 @@
 {% elif operator == "**" %}
     if (b < 0) {
         // TODO: Use CFLOAT once available.
-        PyObject *operand1_float = PyFloat_FromDouble(a);
-        PyObject *operand2_float = PyFloat_FromDouble(b);
+        PyObject *operand1_float = MAKE_FLOAT_FROM_DOUBLE(a);
+        PyObject *operand2_float = MAKE_FLOAT_FROM_DOUBLE(b);
 
         PyObject *r = _BINARY_OPERATION_POW_OBJECT_FLOAT_FLOAT(operand1_float, operand2_float);
 
