--- a/nuitka/code_generation/templates_c/HelperDictionaryCopy.c.j2
+++ b/nuitka/code_generation/templates_c/HelperDictionaryCopy.c.j2
@@ -306,7 +306,7 @@ static PyDictObject *_Nuitka_AllocatePyDictObject(void) {
     } else
 #endif
     {
-        result_mp = PyObject_GC_New(PyDictObject, &PyDict_Type);
+        result_mp = (PyDictObject *)Nuitka_GC_New(&PyDict_Type);
     }
 
     return result_mp;
