Optimization: Avoid useless keyword call with single argument for expression base class
* This doesn't really add readability, but costs compile time performance

--- a/nuitka/tools/specialize/templates_python/HardImportReferenceNode.py.j2
+++ b/nuitka/tools/specialize/templates_python/HardImportReferenceNode.py.j2
@@ -85,10 +85,7 @@ class Expression{{module_name_title}}{{function_name_title}}CallBase(ChildrenHav
 {% endfor %}
         )
 
-        ExpressionBase.__init__(
-            self,
-            source_ref=source_ref
-        )
+        ExpressionBase.__init__(self, source_ref)
 
         # In module mode, we expect a changing environment, cannot optimize this
         self.attempted = shallMakeModule()
