--- a/nuitka/tools/specialize/templates_python/ChildrenHavingMixin.py.j2
+++ b/nuitka/tools/specialize/templates_python/ChildrenHavingMixin.py.j2
@@ -37,7 +37,7 @@
     self.subnode_{{named_child}} = {{value}}
 {% endmacro %}
 
-{% if not is_expression %}
+{% if is_statement %}
 {% set base_class = "StatementBase" %}
 from nuitka.nodes.NodeBases import StatementBase
 {% elif is_compute_final or node_attributes %}
