Optimization: Enhanced performance for index checks and conversions
* The API index check since 3.8 is no longer a DLL call but a function,
  that causes a DLL call which is very slow on DLL using Pythons.

* Also added a replacement for "PyNumber_Index" which was always an API
  and avoids DLL calls as well.

--- a/nuitka/code_generation/templates_c/HelperSlotsBinary.c.j2
+++ b/nuitka/code_generation/templates_c/HelperSlotsBinary.c.j2
@@ -100,7 +100,7 @@
 
     {
 {% if right.needsIndexConversion() %}
-        PyObject *index_value = PyNumber_Index({{ operand2 }});
+        PyObject *index_value = Nuitka_Number_Index({{ operand2 }});
 
         if (unlikely(index_value == NULL)) {
             {{ goto_exit(props, exit_result_exception) }}
