Optimization: Faster exception match checks and sub type checks
* This solves a TODO about inlining the API function used, so we can
  be faster. For every exception handler, we had to do one API call
  there.

* Then also have our own variant of "PyType_IsSubType" that is not an
  API call, since that API used that.

* Should speed up object creations through class type calls, also
  comparisons and operations of non-identical types.

--- a/nuitka/code_generation/templates_c/CodeTemplateCallsPositional.c.j2
+++ b/nuitka/code_generation/templates_c/CodeTemplateCallsPositional.c.j2
@@ -364,7 +364,7 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
             }
 
             if (likely(obj != NULL)) {
-                if (!PyType_IsSubtype(obj->ob_type, called_type)) {
+                if (!Nuitka_Type_IsSubtype(obj->ob_type, called_type)) {
 {% if not has_tuple_arg and args_count != 0 %}
                     Py_DECREF(pos_args);
 {% endif %}
