Optimization: Enhanced how call nodes provide need for checking return value
* Some nodes were not perfectly annotating the need for exception when
  there was in fact no such chance.

* Now we drive this from the expression the call is made for.

* In some cases, this will give better code.

* Added TODO about specs that should indicate if they can raise or not.

--- a/nuitka/tools/specialize/templates_python/ChildrenHavingMixin.py.j2
+++ b/nuitka/tools/specialize/templates_python/ChildrenHavingMixin.py.j2
@@ -359,6 +359,12 @@ class {{mixin_name}}({{base_class}}):
         return self.computeExpression(trace_collection)
 {% endif %}
 
+{% if is_compute_no_raise %}
+    @staticmethod
+    def mayRaiseExceptionOperation():
+        return False
+{% endif %}
+
 {# TODO: Should make it abstract for mere mixins too, but too much work now. #}
 {% if not is_compute_final and named_children and base_class == "ExpressionBase" %}
     @abstractmethod
